# real-time-plotting-of-location-estimates-on-2D-maps

./: README.md
code/GUI_TRACKING/: CMakeLists.txt
code/GUI_TRACKING/App/: CMakeLists.txt
code/GUI_TRACKING/App/src/: main.cpp
code/GUI_TRACKING/Libs/: CMakeLists.txt
code/GUI_TRACKING/Libs/LibX/: CMakeLists.txt
code/GUI_TRACKING/Libs/LibX/includes/: graphinfo.h  item.h  itemlist.h  itemmodel.h  mainmenu.h  mainwindow.h  newmainmenu.h  qcustomplot.h
code/GUI_TRACKING/Libs/LibX/src/: AssetTrail.qml  DotLine.qml  Line.qml  MapMarker.qml  Marker.qml  create_points.js  graphinfo.cpp  graphinfo.ui  item.cpp  itemlist.cpp  main.qml  mainmenu.cpp  mainmenu.ui  mainwindow.cpp  mainwindow.ui  newmainmenu.cpp  newmainmenu.ui  qcustomplot.cpp  qml.qrc  resource.qrc
code/GUI_TRACKING/Libs/LibX/src/itu_18/: filenames.txt
datasets/: UbloxF9P_UBX_NAV_2021_08_06_08_49_31.tab  modified_2_UbloxF9P_UBX_NAV_2021_08_06_08_49_31.tab  modified_UbloxF9P_UBX_NAV_2021_08_06_08_49_31.tab
etc/: map_script.py
